@@ -5,6 +5,9 @@ In Progress
 ---------
 - Updated meterpreter shell and command shell console to honor your set
   preferences. I forgot to pass $preferences to the console constructor. Doh!
+- Added a -d/--debug command line option. This will dump System.getProperties()
+  and a log of all exchanges with the MSF server to debug.log in the current
+  working directory.
 
 13 Dec 10 Changes
 ---------
